fixed top margin on mobile

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -164,7 +164,7 @@
 
   nav {
     right: 30px;
-    margin-top: 11px;
+    // margin-top: 11px;
   }
 
   #menu-toggle input {
